--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,17 +4,10 @@ body {
     background-color: #f0f4f8;
 }
 
-h1 {
-    font-size: 24px;
-    color: #333;
-    background-color: #ececec;
+/*drawing.erb*/
+.head-group {
     padding: 10px;
-    border-radius: 8px;
     margin: 20px auto;
-    width: fit-content;
-    position: absolute;
-    top: 20px;
-    left: 20px;
 }
 
 #container {
@@ -24,18 +17,10 @@ h1 {
     margin: 20px 0 0;
 }
 
-/*#canvas-container {
-    margin: 0 20px 0 0;
-}*/
-
-#headline {
-    margin: auto 50px auto auto;
-}
-
 #canvas {
     border: 2px solid #333;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    margin: 100px auto 0 50px;
+    margin: 30px auto 0 50px;
 }
 
 #tools-container {
@@ -78,7 +63,7 @@ h1 {
     right: 20px;
 }
 
-#clear {
+.clear {
     background-color: #f44336;
     color: #FFF;
 }
@@ -87,7 +72,72 @@ h1 {
     text-decoration: none;
     background-color: #525552;
     color: #FFF;
+    position: absolute;
+    top: 80px;
+    right:20px;
+}
+
+/*ここからhistory.erb*/
+#history-table {
+    width: 90%;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: #FFF;
+}
+
+#history-table th, #history-table td {
+    padding: 3px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+#history-table th {
+    padding: 5px;
+    font-weight: bold;
+}
+
+#image-clear {
+    padding: 8px 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+
+#image-link {
+    text-decoration: none;
+    background-color: #525252;
+    color: #FFF;
+    margin: 0;
+}
+
+#image-link:visited {
+    background-color: #9E9E9E;
 }
 
 @media (max-width:1080px) {
+    #container {
+        width: 100%;
+    }
+
+    table#container td {
+        display: block;
+        width: 100%;
+        border-bottom:none;
+    }
+
+    #headline {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 900px) {
+    h1 {
+        font-size: 22px;
+    }
+    #post {
+        top: 140px;
+        right:20px;
+        height: fit-content;
+    }
 }
