--- a/views/drawing.erb
+++ b/views/drawing.erb
@@ -33,8 +33,14 @@
                             </tr>
                         </table>
                         <div id="pen-eraser">
-                            <label><input type="radio" name="tool" value="pen" id="pen" checked>ペン</label>
-                            <label><input type="radio" name="tool" value="eraser" id="eraser">消しゴム</label>
+                            <label>
+                                <input type="radio" name="tool" value="pen" id="pen" checked>
+                                ペン
+                            </label>
+                            <label>
+                                <input type="radio" name="tool" value="eraser" id="eraser">
+                                消しゴム
+                            </label>
                         </div>
                         <input type="button" id="post" class="button" value="保存">
                         <input type="button" id="clear" class="button clear" value="全削除">
